--- a/GetHired/GetHired.ConsoleClient/App.config
+++ b/GetHired/GetHired.ConsoleClient/App.config
@@ -7,9 +7,11 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+  
   <connectionStrings>
-    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Server=.\SqlServer;Database=GetHired3;Integrated Security=True;" />
+    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Server=.\SqlServer;Database=GetHired;Integrated Security=True;" />
   </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
