--- a/GetHired/GetHired.DTO/GetHired.DTO.csproj
+++ b/GetHired/GetHired.DTO/GetHired.DTO.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddressModel.cs" />
+    <Compile Include="Views\AddressTownView.cs" />
     <Compile Include="CompanyModel.cs" />
     <Compile Include="Contracts\IModificationHistory.cs" />
     <Compile Include="JobCategoryModel.cs" />
@@ -57,6 +58,10 @@
     <Compile Include="TownModel.cs" />
     <Compile Include="UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\CompanyJobOffersView.cs" />
+    <Compile Include="Views\JobOfferUsersView.cs" />
+    <Compile Include="Views\TownAddressesView.cs" />
+    <Compile Include="Views\UserFavouriteJobOffersView.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GetHired.DomainModels\GetHired.DomainModels.csproj">
