--- a/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
+++ b/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
@@ -44,12 +44,12 @@
     <Compile Include="Configurations\Contracts\IFluentConfiguration.cs" />
     <Compile Include="Configurations\JobOfferConfiguration.cs" />
     <Compile Include="Contracts\IGetHiredContext.cs" />
-    <Compile Include="GetHiredContext.cs" />
+    <Compile Include="Models\GetHiredContext.cs" />
     <Compile Include="Migrations\201803220705154_InterfaceIModificationHistoryImplemented.cs" />
     <Compile Include="Migrations\201803220705154_InterfaceIModificationHistoryImplemented.Designer.cs">
       <DependentUpon>201803220705154_InterfaceIModificationHistoryImplemented.cs</DependentUpon>
     </Compile>
-    <Compile Include="UnitsOfWork\Contracts\IUnitOfWork.cs" />
+    <Compile Include="Contracts\IUnitOfWork.cs" />
     <Compile Include="Migrations\201803191716378_Initial.cs" />
     <Compile Include="Migrations\201803191716378_Initial.Designer.cs">
       <DependentUpon>201803191716378_Initial.cs</DependentUpon>
@@ -64,8 +64,8 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\AddressRepository.cs" />
-    <Compile Include="Repositories\CompanyRepository.cs" />
+    <Compile Include="Repositories\Models\AddressRepository.cs" />
+    <Compile Include="Repositories\Models\CompanyRepository.cs" />
     <Compile Include="Repositories\Contracts\IAddressRepository.cs" />
     <Compile Include="Repositories\Contracts\ICompanyRepository.cs" />
     <Compile Include="Repositories\Contracts\IJobOfferRepository.cs" />
@@ -73,12 +73,12 @@
     <Compile Include="Repositories\Contracts\IGenericRepository.cs" />
     <Compile Include="Repositories\Contracts\ITownRepository.cs" />
     <Compile Include="Repositories\Contracts\IWriteonlyRepository.cs" />
-    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\Models\GenericRepository.cs" />
     <Compile Include="Repositories\Contracts\IUserRepository.cs" />
-    <Compile Include="Repositories\JobOfferRepository.cs" />
-    <Compile Include="Repositories\TownRepository.cs" />
-    <Compile Include="Repositories\UserRepository.cs" />
-    <Compile Include="UnitsOfWork\UnitOfWork.cs" />
+    <Compile Include="Repositories\Models\JobOfferRepository.cs" />
+    <Compile Include="Repositories\Models\TownRepository.cs" />
+    <Compile Include="Repositories\Models\UserRepository.cs" />
+    <Compile Include="Models\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
